# rdma-pmem

./: .gitignore  Vagrantfile  schemat.txt  tobenchmark.txt
rwbenchmark/: CMakeLists.txt
rwbenchmark/src/: client.cpp  common.hpp  server.cpp
rwbenchmark2/: CMakeLists.txt  todo.txt
rwbenchmark2/iperf3_results/: iperf3-1024-1-nofile.json  iperf3-1024-1-nopmem.json  iperf3-1024-2-nopmem.json  iperf3-1024-4-nopmem.json  iperf3-1024-8-nofile.json  iperf3-1024-8-pmem.json  iperf3-12288-1-nopmem.json  iperf3-12288-1-pmem.json  iperf3-12288-2-pmem.json  iperf3-12288-4-nopmem.json  iperf3-16384-1-nofile.json  iperf3-16384-1-pmem.json  iperf3-16384-2-nofile.json  iperf3-16384-2-nopmem.json  iperf3-16384-8-nopmem.json  iperf3-2048-1-nofile.json  iperf3-2048-1-pmem.json  iperf3-2048-2-nofile.json  iperf3-2048-4-nofile.json  iperf3-2048-4-nopmem.json  iperf3-2048-4-pmem.json  iperf3-2048-8-nopmem.json  iperf3-2048-8-pmem.json  iperf3-20480-1-nofile.json  iperf3-20480-1-nopmem.json  iperf3-20480-8-nofile.json  iperf3-20480-8-nopmem.json  iperf3-24576-1-nofile.json  iperf3-24576-1-nopmem.json  iperf3-24576-1-pmem.json  iperf3-24576-2-nofile.json  iperf3-24576-4-nofile.json  iperf3-24576-4-nopmem.json  iperf3-24576-4-pmem.json  iperf3-256-1-nopmem.json  iperf3-256-1-pmem.json  iperf3-256-2-nopmem.json  iperf3-256-2-pmem.json  iperf3-256-4-nofile.json  iperf3-256-4-nopmem.json  (+17 more)
rwbenchmark2/results/: results30s.json
rwbenchmark2/rpma_bench_results/: rpma_fio_apm_busy-wait_write_bw-bs_th12_dp1_dev_dax0.1-21-09-07-230548.csv  rpma_fio_apm_busy-wait_write_bw-bs_th1_dp1_dev_dax0.1-21-09-07-214923.csv  rpma_fio_apm_busy-wait_write_lat_th1_dp1_dev_dax0.1-21-09-07-201345.csv  rpma_fio_apm_busy-wait_write_lat_th2_dp1_dev_dax0.1-21-09-07-203259.csv  rpma_fio_apm_busy-wait_write_lat_th4_dp1_dev_dax0.1-21-09-07-205205.csv  rpma_fio_apm_busy-wait_write_lat_th8_dp1_dev_dax0.1-21-09-07-211110.csv  (+5 more)
rwbenchmark2/scripts/: run_iperf.py  (+10 more)
(+131 files in other folders)
